tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__PortableCleanEne-AAAAAAAAAAAAAAAAAAAK6g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2794,
  "prerequisites": [
    1491,
    1261
  ],
  "properties": {
    "auto_claim": false,
    "desc": "As long as you don't hold the fuel, that is. Very useful for your Mining rigs, the efficiency on these goes way up as they increase in tier. Though they require more Enriched Naquadah each tier (and Naquadria at ZPM).\n\n[note]The fuel is radioactive, dummy.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Portable Clean Energy EV",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1491,
    1261
  ],
  "rewards": [],
  "tasks": []
}
